package rina.messages;
option java_package="rina.encoding.impl.googleprotobuf.apnaminginfo";

message applicationEntityNamingInfo_t {
       required string applicationEntityName = 1;
       optional string applicationEntityInstance = 2;
}

message applicationProcessNamingInfo_t {         // carries the naming information of an application process
        required string applicationProcessName = 1;
        optional string applicationProcessInstance = 2;
        repeated applicationEntityNamingInfo_t applicationEntities = 3;
}
